--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -1,10 +1,15 @@
+* {
+    box-sizing: border-box;
+    border: solid 1px blue;
+}
+
 body, html {
     height: 100%;
-    box-sizing: content-box;
 }
 body {
     color: #000000;
-    background-image: url("/assets/burger.jpg");
+    background-color: slategray;
+    /*background-image: url('burger.jpg');*/
     background-repeat: no-repeat;
     background-attachment: fixed;
     padding: 0;
@@ -18,7 +23,7 @@ body {
     padding-right: 25ch;
 }
 .header {
-    border: solid 2px slategray;
+    border: solid 5px blue;
 }
 #logo {
     width: 175px;
