--- a/front-end/ejs/index_error.ejs
+++ b/front-end/ejs/index_error.ejs
@@ -9,3 +9,11 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+<div class="container">
+    <%-include('./header')-%>
+    <%-include('./navigation_bar')-%>
+    <%-include('./content_error')-%>
+    <%-include('./footer')-%>
+</div>
+</body>
+</html>
