--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -4,7 +4,8 @@
 }
 
 body, html {
-    height: 100%;
+    min-height: 100%;
+    margin: auto;
 }
 body {
     color: #000000;
@@ -15,16 +16,51 @@ body {
     padding: 0;
     margin: 0;
 }
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 8px 20px;
+    text-decoration: none;
+}
+li a:hover {
+    background-color: #111;
+}
+li:last-child {
+    float: right;
+}
+a .active {
+    background-color: chocolate;
+}
 .container {
-    padding-top: 5ch;
-    height: 100%;
+    max-width: 800px;
+    margin: auto;
+    min-height: 100%;
     border: solid 1px #ffffff;
-    padding-left: 25ch;
-    padding-right: 25ch;
 }
 .header {
-    border: solid 5px blue;
+    overflow: hidden;
 }
-#logo {
-    width: 175px;
+.navigation {
+
+}
+#header {
+    align-content: center;
+    overflow: hidden;
+    height: 100px;
+    min-width: 800px;
+    width: 100%;
+    margin: auto;
 }
