--- a/front-end/ejs/header.ejs
+++ b/front-end/ejs/header.ejs
@@ -1,5 +1,5 @@
 <div class="header">
     <a href="/">
-        <img id="header" src="Header.png" alt="Come 'n Shed">
+        <img id="header" src="/Header.png" alt="Come 'n Shed">
     </a>
 </div>
