--- a/front-end/ejs/navigation_bar.ejs
+++ b/front-end/ejs/navigation_bar.ejs
@@ -1,7 +1,11 @@
 <ul>
-    <li><a href="news">Naujienos</a></li>
-    <li><a href="b">B</a></li>
-    <li><a href="c">C</a></li>
-    <li><a href="d">D</a></li>
-    <li><a href="contacts">Kontaktai</a></li>
+    <div style="float: left">
+        <li><a href="/news">Naujienos</a></li>
+        <li><a href="/menu">Patiekalai</a></li>
+        <li><a href="/c">C</a></li>
+    </div>
+    <div style="float: right">
+        <li><a href="/login">Prisijungti</a></li>
+        <li><a href="/contacts">Kontaktai</a></li>
+    </div>
 </ul>
