--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -1,6 +1,5 @@
 * {
     box-sizing: border-box;
-    border: solid 1px blue;
 }
 
 body, html {
@@ -10,7 +9,6 @@ body, html {
 body {
     color: #000000;
     background-color: slategray;
-    /*background-image: url('burger.jpg');*/
     background-repeat: no-repeat;
     background-attachment: fixed;
     padding: 0;
@@ -38,9 +36,6 @@ li a {
 li a:hover {
     background-color: #111;
 }
-li:last-child {
-    float: right;
-}
 a .active {
     background-color: chocolate;
 }
@@ -51,16 +46,40 @@ a .active {
     border: solid 1px #ffffff;
 }
 .header {
+    margin: 0;
+    padding: 0;
     overflow: hidden;
 }
 .navigation {
 
 }
+.content {
+    border: 1px solid #243a65;
+    margin: 10px;
+    padding: 10px;
+}
 #header {
+    display: block;
+    margin: 0;
+    padding: 0;
     align-content: center;
     overflow: hidden;
     height: 100px;
     min-width: 800px;
     width: 100%;
-    margin: auto;
+}
+.justify {
+    text-align: justify;
+    text-justify: inter-word;
+}
+.footer {
+    font-weight: bolder;
+    background-color: #333333;
+    color: white;
+    text-align: center;
+    font-family: "Courier New", monospace;
+}
+a.empty, a:visited.empty, a:link.empty {
+    text-decoration: none;
+    color: inherit;
 }
