--- a/front-end/ejs/index_template.ejs
+++ b/front-end/ejs/index_template.ejs
@@ -6,13 +6,14 @@
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title><%=title%></title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="icon" href="/favicon.png">
+        <link rel="stylesheet" type="text/css" href="/style.css">
     </head>
     <body>
         <div class="container">
             <%-include('./header')-%>
             <%-include('./navigation_bar')-%>
-            <%-include('./content')-%>
+            <%-include(`./${content}`)-%>
             <%-include('./footer')-%>
         </div>
     </body>
