--- a/front-end/ejs/content.ejs
+++ b/front-end/ejs/content.ejs
@@ -5,8 +5,7 @@
 <div class="content justify">
     <b>Writter: Author</b>
     <br>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed id turpis et metus porta malesuada. Morbi condimentum iaculis nulla non consectetur. Aliquam tempor pharetra velit, et congue est vehicula non. Donec quam purus, scelerisque quis pulvinar ut, vulputate id quam. Suspendisse vel sem ligula. Sed in lorem scelerisque, convallis eros sed, pharetra massa. In hac habitasse platea dictumst. In quis felis facilisis, facilisis lacus at, tempus dolor. Donec vitae finibus turpis. Maecenas dolor velit, pharetra ac risus vitae, fermentum gravida nisl. Praesent quis porta lacus, at molestie libero. Proin ac tellus imperdiet, viverra lorem ac, ultricies nulla. Nam blandit leo non tortor mollis, at sollicitudin odio vehicula.
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at sodales ligula. Vestibulum vehicula magna arcu, in imperdiet lorem mollis eu. Aenean eget sapien non mi pulvinar accumsan. Nullam in sem gravida odio mollis tincidunt. Cras rutrum vel ante sit amet feugiat. Aliquam ultricies bibendum nunc, sit amet maximus est fringilla ut. Quisque lobortis semper mi, in auctor nibh accumsan at.
+    <iframe width="400" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="gmap_canvas" src="https://maps.google.com/maps?width=400&amp;height=400&amp;hl=en&amp;q=Mindaugo%20pr.%2018%20Kaunas+(Come%20'n%20Shed%20Kaunas)&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe> <a href='https://www.symptoma.ro/'>Symptom Checker Romanian</a> <script type='text/javascript' src='https://embedmaps.com/google-maps-authorization/script.js?id=0e49cc736ce4321e84b90f92939dba9279b5b03e'></script>
     <br>
     <b><%=time%></b>
 </div>
