--- a/front-end/ejs/content_news.ejs
+++ b/front-end/ejs/content_news.ejs
@@ -5,7 +5,9 @@
         <br>
         <%=item.content.substr(0, item.content.indexOf('.'))%>
         <br>
-        Announced on: <b><%=item.time%></b>
+        <div style="text-align: right">
+            <b><%=item.time%></b>
+        </div>
     </div>
 </a>
 <%})%>
