--- a/ejs/guest/news.ejs
+++ b/ejs/guest/news.ejs
@@ -1,9 +1,9 @@
 <%
-    let data = await db.query("SELECT * FROM news")
+    let data = await db.query("SELECT * FROM system.news")
     data.forEach(element => {
 %>
-<div class="news_item">
-        <%= element['content'].split('.')[0] + '.' %>
+<div class="news_item" onclick="redirect('<%= '/news_item/'+element['id'] %>')">
+        <%= element['content'].split('.')[0] %>
 </div>
 <%
     })
