--- a/ejs/guest/login.ejs
+++ b/ejs/guest/login.ejs
@@ -20,7 +20,7 @@
     <br>
     <label>Slaptažodis</label>
     <br>
-    <input type="text" name="password" style="width: 100%">
+    <input type="password" name="password" style="width: 100%">
     <br>
     <input type="submit" style="width: 100%" value="Prisijungti">
 </form>
