- worker done - minor client fixes - reik pakeist order lenteles columnu tip ir price tipa is decimal(10) i decimal(10,2) - reik pridet padaryt kad client ir worker galetu siust laiskus

--- a/ejs/client/content.ejs
+++ b/ejs/client/content.ejs
@@ -1,6 +1,7 @@
 <div class="container">
     <%
         switch (option) {
+            case 'default':
             case 'email_list':
                 %>
                 <%-await include('email_list')%>
