--- a/ejs/admin/dish_edit.ejs
+++ b/ejs/admin/dish_edit.ejs
@@ -4,16 +4,16 @@ let data = await db.query(`SELECT * FROM system.dish WHERE id ='${id}'`)
 element = data[0]
 %>
 <div class="news_item">
-    <textarea id="name" class="simple" style="resize: vertical; width: 100%;"><%=element['name']%></textarea>
-    <textarea id="description" class="simple" style="resize: vertical; width: 100%;"><%=element['description']%></textarea>
-    <textarea id="price" class="simple" style="resize: vertical; width: 100%;"><%=element['price'].toFixed(2)%></textarea>
-    <hr>
-    <div style="width: 100%; text-align: right">
-        <button class="simple" onclick="news_update('<%=id%>', document.getElementById('news').value)">
-            Patvirtinti
-        </button>
-        <button class="simple" onclick="redirect('/news_item/<%=id%>')">
-            Atšaukti
-        </button>
-    </div>
+    <form method="post">
+        <textarea name="name" class="simple" style="resize: vertical; width: 100%;"><%=element['name']%></textarea>
+        <textarea name="description" class="simple" style="resize: vertical; width: 100%;"><%=element['description']%></textarea>
+        <input type="number" pattern="[0-9]+([\.,][0-9]+)?" step="0.01" name="price" class="simple" style="resize: vertical; width: 100%;" value="<%=element['price'].toFixed(2)%>">
+        <hr>
+        <div style="width: 100%; text-align: right">
+            <input type="submit" value="Patvirtinti">
+            <button type="button" class="simple" onclick="redirect('/dish/<%=id%>')" >
+                Atšaukti
+            </button>
+        </div>
+    </form>
 </div>
